--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
-    implementation 'com.github.andromedaone:alienlib:-SNAPSHOT'
+    implementation 'com.github.andromedaone:alienlib:master-SNAPSHOT'
 
 }
 
