--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,11 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
-    implementation 'com.github.andromedaone:alienlib:master-SNAPSHOT'
+    implementation 'com.github.AndromedaOne:AlienLib:0.1'
+    /*The lines below have built successfully in the past...
+    * implementation 'com.github.AndromedaOne:AlienLib:master-SNAPSHOT'
+    * implementation 'com.github.AndromedaOne:AlienLib:-SNAPSHOT'
+    * should build in theory according to Owen. Not sure what's up, but it can't find openCV any more :( */
 
 }
 
