Updated Spark Max Controller to read from config properly

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/DriveTrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/DriveTrain.conf
@@ -1,12 +1,6 @@
 ports {
-    rightMaster=1
-    rightSlave=2
-
-    leftMaster=3
-    leftSlave=4
-
-    leftTalon1=4
-    leftTalon2=3
-    rightTalon3=2
-    rightTalon4=1
+    frontleft=0
+    backleft=0
+    frontright=0
+    backright=0
 }
