feat(sensors): Add debug stuff
               Lots of printlns and other debug stuff - sensors work

--- a/src/main/deploy/robotConfigs/TheClaw/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/sensors.conf
@@ -2,6 +2,7 @@ sensors {
     ballFeederSensor {
         isOnboard = true
         numSensors = 8
+        detectionThreshold = 0.5
     }
     navx {
         port = 1
