--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -4,5 +4,21 @@ ports {
     frontright=1
     backright=2
 }
+frontleft {
+    hasEncoder=false
+    inverted=true
+}
+backleft {
+    hasEncoder=true
+    inverted=true
+}
+frontright {
+    hasEncoder=false
+    inverted=true
+}
+backright {
+    hasEncoder=true
+    inverted=true
+}
 ticksPerInch=1
 motorController=talonSRX
