Added shooting command - WIP

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -1,7 +1,7 @@
 ports{
-    shooterOne=1
-    shooterTwo=2
-    shooterSeries=1
-    hoodOne=1
-    hoodTwo=2
+    shooterone=1
+    shootertwo=2
+    shooterseries=1
+    hoodone=1
+    hoodtwo=2
 }
