Fixed merge conflicts

--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -20,5 +20,10 @@ backright {
     hasEncoder=true
     inverted=true
 }
+gyrocorrect {
+    kdelay=25
+    kproportion=0.05
+    invertgyrocorrect=false
+}
 ticksPerInch=1
 motorController=talonSRX
