--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -5,20 +5,24 @@ ports {
     backright=2
 }
 frontleft {
-    hasEncoder=false
     inverted=true
+    hasEncoder=true
+    encoderInverted=false
 }
 backleft {
-    hasEncoder=true
     inverted=true
+    hasEncoder=false
+    encoderInverted=false
 }
 frontright {
-    hasEncoder=false
     inverted=true
+    hasEncoder=true
+    encoderInverted=true
 }
 backright {
-    hasEncoder=true
     inverted=true
+    hasEncoder=false
+    encoderInverted=false
 }
 gyrocorrect {
     kdelay=25
