(NOT TESTED) Updated Spark Max encoders to match implementation of Talon SRX encoders

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -4,10 +4,30 @@ ports {
     frontright=2
     backright=4
 }
-ticksPerInch=1
-motorController=sparkMax
+frontleft {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+}
+backleft {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+}
+frontright {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+}
+backright {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+}
 gyrocorrect {
     kdelay=25
     kproportion=0.05
     invertgyrocorrect=false
 }
+ticksPerInch=1
+motorController=sparkMax
