--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -2,6 +2,7 @@ sensors {
     ballFeederSensor {
         isOnboard = true
         numSensors = 8
+        detectionThreshold = 0
     }
     navx {
         port = 1
