--- a/src/main/deploy/robotConfigs/TheClaw/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/sensors.conf
@@ -3,8 +3,8 @@ sensors {
         isOnboard = true
         numSensors = 8
         detectionThreshold = 0.5
-    }
-    navx {
-        port = 1
-    }
+    } 
+}
+navx {
+    port=SPI
 }
