Added support for Spark Max encoders and fixed a bug with position/velocity calculation

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -17,12 +17,12 @@ backleft {
 frontright {
     inverted=false
     hasEncoder=true
-    encoderInverted=false
+    encoderInverted=true
 }
 backright {
     inverted=false
     hasEncoder=true
-    encoderInverted=false
+    encoderInverted=true
 }
 gyrocorrect {
     kdelay=25
