Updated the shooter conf's and the code to work with the latest changes

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -2,8 +2,7 @@ ports{
     shooterone=1
     shootertwo=2
     shooterseries=1
-    hoodone=1
-    hoodtwo=2
+    hood=1
 }
 shooterticksperrotation = 42
 seriesticksperrotation = 0
