--- a/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
@@ -1,12 +1,15 @@
 GyroPIDCommands {
-    TurningPTerm=0.01
+    TurningPTerm=0.005
     TurningITerm=0
     TurningDTerm=0
+    minOutputToMove=0.2
+    positionTolerance=0.5
+    velocityTolerance=1 // not actually used in code
 }
 MoveUsingEncoder {
-    Kp = 0.04
-    Ki = 0
-    Kd = 0
-    minOutputToMove = 0.22
-    tolerance = 0.1
+    Kp=0.04
+    Ki=0
+    Kd=0
+    minOutputToMove=0.22
+    tolerance=0.1
 }
