--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
@@ -2,6 +2,9 @@ GyroPIDCommands {
     TurningPTerm=0.0025
     TurningITerm=0
     TurningDTerm=0
+    minOutputToMove=0.2
+    positionTolerance=0.5
+    velocityTolerance=1 // not actually used in code
 }
 MoveUsingEncoder {
     Kp = 0.01
