--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -8,21 +8,29 @@ frontleft {
     inverted=false
     hasEncoder=true
     encoderInverted=false
+    currentLimit=60
+    brakeMode=true
 }
 backleft {
     inverted=false
     hasEncoder=true
     encoderInverted=false
+    currentLimit=60
+    brakeMode=true
 }
 frontright {
     inverted=false
     hasEncoder=true
     encoderInverted=true
+    currentLimit=60
+    brakeMode=true
 }
 backright {
     inverted=false
     hasEncoder=true
     encoderInverted=true
+    currentLimit=60
+    brakeMode=true
 }
 gyrocorrect {
     kdelay=25
