--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -1,32 +1,36 @@
 ports {
-    frontleft=1
-    backleft=3
-    frontright=2
-    backright=4
+    frontleft=3
+    backleft=4
+    frontright=1
+    backright=2
 }
 frontleft {
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=false
+    brakemode=true
 }
 backleft {
-    inverted=false
-    hasEncoder=true
+    inverted=true
+    hasEncoder=false
     encoderInverted=false
+    brakemode=true
 }
 frontright {
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=true
+    brakemode=true
 }
 backright {
-    inverted=false
-    hasEncoder=true
-    encoderInverted=true
+    inverted=true
+    hasEncoder=false
+    encoderInverted=false
+    brakemode=true
 }
 gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
-ticksPerInch=1
-motorController=sparkMax
+ticksPerInch=2046
+motorController=talonSRX
