--- a/src/main/deploy/robotConfigs/RoadKill/sensors.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/sensors.conf
@@ -2,9 +2,9 @@ sensors {
     ballFeederSensor {
         isOnboard = true
         numSensors = 8
-        detectionThreshold = 0
-    }
+        detectionThreshold = 0.5
+    } 
 }
 navx {
-port=MXP
+    port=SPI
 }
