--- a/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
@@ -1,3 +1,19 @@
+commands {
+    runshooterwheelvelocity {
+        p = 0
+        i = 0
+        d = 0
+        s = 0
+        tolerance = 1
+    }
+    runshooterseriesvelocity {
+        p = 0 
+        i = 0
+        d = 0
+        s = 0
+        tolerance = 1
+    }
+}
 GyroPIDCommands {
     TurningPTerm=0.005
     TurningITerm=0
