--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -1,36 +1,32 @@
 ports {
-    frontleft=3
-    backleft=4
-    frontright=1
-    backright=2
+    frontleft=1
+    backleft=3
+    frontright=2
+    backright=4
 }
 frontleft {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=false
-    brakemode=true
 }
 backleft {
-    inverted=true
-    hasEncoder=false
+    inverted=false
+    hasEncoder=true
     encoderInverted=false
-    brakemode=true
 }
 frontright {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=true
-    brakemode=true
 }
 backright {
-    inverted=true
-    hasEncoder=false
-    encoderInverted=false
-    brakemode=true
+    inverted=false
+    hasEncoder=true
+    encoderInverted=true
 }
 gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
-ticksPerInch=2046
-motorController=talonSRX
+ticksPerInch=1
+motorController=sparkMax
