--- a/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
@@ -1,5 +1,21 @@
+commands {
+    runshooterwheelvelocity {
+        p = 0
+        i = 0
+        d = 0
+        s = 0
+        tolerance = 1
+    }
+    runshooterseriesvelocity {
+        p = 0 
+        i = 0
+        d = 0
+        s = 0
+        tolerance = 1
+    }
+}
 GyroPIDCommands {
-    TurningPTerm=0.005
+    TurningPTerm=0.0025
     TurningITerm=0
     TurningDTerm=0
     minOutputToMove=0.2
@@ -7,9 +23,9 @@ GyroPIDCommands {
     velocityTolerance=1 // not actually used in code
 }
 MoveUsingEncoder {
-    Kp=0.04
-    Ki=0
-    Kd=0
-    minOutputToMove=0.22
-    tolerance=0.1
+    Kp = 0.01
+    Ki = 0
+    Kd = 0
+    minOutputToMove = 0
+    tolerance = 0.1
 }
