--- a/src/main/deploy/robotConfigs/roadkill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/roadkill/drivetrain.conf
@@ -1,33 +1,32 @@
 ports {
-    frontleft=3
-    backleft=4
-    frontright=1
-    backright=2
+    frontleft=1
+    backleft=3
+    frontright=2
+    backright=4
 }
 frontleft {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=false
 }
 backleft {
-    inverted=true
-    hasEncoder=false
+    inverted=false
+    hasEncoder=true
     encoderInverted=false
 }
 frontright {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=true
 }
 backright {
-    inverted=true
-    hasEncoder=false
-    encoderInverted=false
+    inverted=false
+    hasEncoder=true
+    encoderInverted=true
 }
 gyrocorrect {
     kdelay=25
     kproportion=0.05
-    invertgyrocorrect=false
 }
 ticksPerInch=1
-motorController=talonSRX
+motorController=sparkMax
