--- a/src/main/deploy/robotConfigs/roadkill/sensors.conf
+++ b/src/main/deploy/robotConfigs/roadkill/sensors.conf
@@ -2,9 +2,9 @@ sensors {
     ballFeederSensor {
         isOnboard = true
         numSensors = 8
-        detectionThreshold = 0.5
+        detectionThreshold = 0
     }
-    navx {
-        port = 1
-    }
+}
+navx {
+port=MXP
 }
