Finished spotless-ing and also made sure it works on both robots

--- a/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
@@ -13,3 +13,9 @@ MoveUsingEncoder {
     minOutputToMove=0.22
     tolerance=0.1
 }
+TurnToFaceCommand {
+    Kp = 0.03
+    Ki = 0.008
+    Kd = 0.0005
+    minOutputToMove = 0.2
+}
