--- a/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
@@ -30,8 +30,9 @@ MoveUsingEncoder {
     tolerance = 0.1
 }
 TurnToFaceCommand {
-    Kp = 0.03
-    Ki = 0.008
-    Kd = 0.0005
-    minOutputToMove = 0.2
+    Kp = 0.1
+    Ki = 0.0
+    Kd = 0.009
+    minOutputToMove = 0.4
+    tolerance = 0.01
 }
