Fixed a minor mistake w/ config

--- a/src/main/deploy/robotConfigs/RoadKill/sensors.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/sensors.conf
@@ -5,10 +5,12 @@ sensors {
         detectionThreshold = 0
     }
     cameras {
-        camera0=0
-        width=320
-        height=240
-        fps=10
+        camera0 {
+            port=0
+            width=320
+            height=240
+            fps=10
+        }
     }
 }
 }
