--- a/src/main/deploy/robotConfigs/TheClaw/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/sensors.conf
@@ -4,6 +4,14 @@ sensors {
         numSensors = 8
         detectionThreshold = 0.5
     } 
+    cameras {
+        camera0 {
+            port=0
+            width=320
+            height=240
+            fps=10
+        }
+    }
 }
 navx {
     port=SPI
