Added shooter commands with adjusting capabilities

--- a/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
@@ -8,3 +8,5 @@ shooterticksperrotation = 42
 seriesticksperrotation = 0
 shooteridlespeed = 0
 seriesidlespeed = 0
+shooterwheeljoystickscale = 1
+serieswheeljoystickscale = 1
