Created shooter buttons.

--- a/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
@@ -4,6 +4,12 @@ ports{
     shooterseries=1
     hood=1
 }
+shootingrpm{
+    initline = 0
+    fronttrench = 2650
+    backtrench = 3540
+    targetzone = 0
+}
 shooterticksperrotation = 42
 seriesticksperrotation = 0
 shooteridlespeed = 0
