--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -1,8 +1,14 @@
 ports{
-    shooterone=1
-    shootertwo=2
-    shooterseries=1
-    hood=1
+    shooterone = 1
+    shootertwo = 2
+    shooterseries = 1
+    hood = 1
+}
+shootingrpm{
+    initline = 0
+    fronttrench = 2650
+    backtrench = 3540
+    targetzone = 0
 }
 shooterticksperrotation = 42
 seriesticksperrotation = 0
