Changed feeder default command to do nothing because we won't have the right sensors for week 0. Told the shooter that it's kicker wheel does not have an encoder. Added configuration  code for the intake.

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -4,6 +4,15 @@ ports{
     shooterseries=1
     hood=1
 }
+
+shooterseries {
+    inverted=false
+    hasEncoder=false
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
+}
+
 shooterticksperrotation = 42
 seriesticksperrotation = 0
 shooteridlespeed = 0
