Added shooter config to droidyourkindalookingfor

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -2,12 +2,31 @@ ports{
     shooterone=1
     shootertwo=2
     shooterseries=1
-    hood=1
+    hood{
+        forwardChannel=2
+        reverseChannel=3
+    }
 }
 
 shooterseries {
     inverted=false
     hasEncoder=false
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
+}
+
+shooterone {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
+}
+
+shootertwo {
+    inverted=false
+    hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=false
