Changed Climber solenoid to be the right ports

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Climber.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Climber.conf
@@ -1,19 +1,23 @@
 ports {
     leftGrapplingHook {
-        forwardChannel=1
-        reverseChannel=0
+        forwardChannel=4
+        reverseChannel=5
     }
     rightGrapplingHook {
-        forwardChannel=1
-        reverseChannel=0
+        forwardChannel=6
+        reverseChannel=7
     }
     leftWinch=1
     rightWinch=2
     leftBrake {
+        # These are set to 99 becasue they will not exist on week 0 robot
+        # but are still created in the code...
         forwardChannel=99
         reverseChannel=99
     }
     rightBrake {
+        # These are set to 99 becasue they will not exist on week 0 robot
+        # but are still created in the code...
         forwardChannel=99
         reverseChannel=99
     }
