Xed out limelight in the droid your looking for config

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -18,7 +18,8 @@ sensors {
 navx {
 port=MXP
 }
-limelight {
+# Not using limelight at week 0 so I'm commenting it out
+xlimelight {
     cameraHeight = 23.0
     cameraAngleRadians = 0.59
 }
