--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -18,8 +18,8 @@ sensors {
 navx {
 port=MXP
 }
-# Not using limelight at week 0 so I'm commenting it out
-xlimelight {
+
+limelight {
     cameraHeight = 23.0
     cameraAngleRadians = 0.59
 }
