--- a/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
@@ -15,12 +15,12 @@ runshooterseriesvelocity {
     tolerance = 1
 }
 GyroPIDCommands {
-    TurningPTerm=0.005
+    TurningPTerm=0.0005
     TurningITerm=0
     TurningDTerm=0
-    minOutputToMove=0.2
-    positionTolerance=0.5
-    velocityTolerance=1 // not actually used in code
+    minOutputToMove=0.1
+    positionTolerance=10
+    velocityTolerance=10
 }
 MoveUsingEncoder {
     Kp = 0.01
