Added some config stuff for inverting motors based on spark testing

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -17,7 +17,7 @@ shooterseries {
 }
 
 shooterone {
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
