Drivetrain and intake are working nothing else has been tested. All can ids are assigned

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -1,6 +1,7 @@
 ports{
     stageOne=8
     stageTwo=9
+    stageThree=13
 }
 
 stageOne {
@@ -12,6 +13,14 @@ stageOne {
 }
 
 stageTwo {
+    inverted=false
+    hasEncoder=false
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=true
+}
+
+stageThree {
     inverted=false
     hasEncoder=false
     encoderInverted=false
