--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -19,14 +19,14 @@ backleft {
     brakeMode=true
 }
 frontright {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=true
     currentLimit=60
     brakeMode=true
 }
 backright {
-    inverted=true
+    inverted=false
     hasEncoder=true
     encoderInverted=true
     currentLimit=60
