Auto work, untested, added maxOutput stuff

--- a/src/main/deploy/robotConfigs/Backup4905/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/Backup4905/pidconstants.conf
@@ -3,5 +3,6 @@ MoveUsingEncoder {
     Ki = 0
     Kd = 0
     minOutputToMove = 0
-    tolerance = 0.1
+    positionTolerance=0.1
+    velocityTolerance=0.1
 }
