--- a/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
@@ -26,8 +26,9 @@ MoveUsingEncoder {
     Kp = 0.01
     Ki = 0
     Kd = 0
-    minOutputToMove = 0.2
-    tolerance = 0.1
+    minOutputToMove = 0.075
+    positionTolerance=2
+    velocityTolerance=2
 }
 TurnToFaceCommand {
     Kp = 0.03
