--- a/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
@@ -19,15 +19,17 @@ GyroPIDCommands {
     TurningITerm=0
     TurningDTerm=0
     minOutputToMove=0.2
-    positionTolerance=0.5
-    velocityTolerance=1 // not actually used in code
+    positionTolerance=5
+    velocityTolerance=5
 }
 MoveUsingEncoder {
     Kp=0.04
     Ki=0
     Kd=0
-    minOutputToMove=0.22
-    tolerance=0.1
+    minOutputToMove=0.09
+    positionTolerance=0.1
+    velocityTolerance=1
+    maxOutput=0.5
 }
 TurnToFaceCommand {
     Kp = 0.03
