--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
@@ -20,14 +20,15 @@ GyroPIDCommands {
     TurningDTerm=0
     minOutputToMove=0.2
     positionTolerance=0.5
-    velocityTolerance=1 // not actually used in code
+    velocityTolerance=1
 }
 MoveUsingEncoder {
     Kp = 0.01
     Ki = 0
     Kd = 0
     minOutputToMove = 0
-    tolerance = 0.1
+    positionTolerance=0.1
+    velocityTolerance=0.1
 }
 TurnToFaceCommand {
     Kp = 0.03
