Stage three is now working

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -21,7 +21,7 @@ stageTwo {
 }
 
 stageThree {
-    inverted=false
+    inverted=true
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
