Updated SparkMax controller to get and set encoder ticks per revolution

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -10,6 +10,7 @@ frontleft {
     encoderInverted=false
     currentLimit=60
     brakeMode=true
+    encoderTicksPerRotation=554
 }
 backleft {
     inverted=false
@@ -17,6 +18,7 @@ backleft {
     encoderInverted=false
     currentLimit=60
     brakeMode=true
+    encoderTicksPerRotation=554
 }
 frontright {
     inverted=false
@@ -24,6 +26,7 @@ frontright {
     encoderInverted=true
     currentLimit=60
     brakeMode=true
+    encoderTicksPerRotation=554
 }
 backright {
     inverted=false
@@ -31,10 +34,11 @@ backright {
     encoderInverted=true
     currentLimit=60
     brakeMode=true
+    encoderTicksPerRotation=554
 }
 gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
-ticksPerInch=1
+ticksPerInch=29.4
 motorController=sparkMax
