--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -8,25 +8,25 @@ frontleft {
     inverted=true
     hasEncoder=true
     encoderInverted=false
-    brakemode=true
+    brakeMode=true
 }
 backleft {
     inverted=true
     hasEncoder=false
     encoderInverted=false
-    brakemode=true
+    brakeMode=true
 }
 frontright {
     inverted=true
     hasEncoder=true
     encoderInverted=true
-    brakemode=true
+    brakeMode=true
 }
 backright {
     inverted=true
     hasEncoder=false
     encoderInverted=false
-    brakemode=true
+    brakeMode=true
 }
 gyrocorrect {
     kdelay=25
