--- a/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/pidconstants.conf
@@ -26,8 +26,8 @@ MoveUsingEncoder {
     Kp = 0.01
     Ki = 0
     Kd = 0
-    minOutputToMove = 0
-    tolerance = 0.1
+    minOutputToMove = 0.05
+    tolerance = .5
 }
 TurnToFaceCommand {
     Kp = 0.03
