Shooter PID Tuning

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -9,7 +9,7 @@ ports{
 }
 
 shooterseries {
-    inverted=false
+    inverted=true
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
