Fixed feeder code (By Sean) forgot to push

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -13,7 +13,7 @@ stageOne {
 }
 
 stageTwo {
-    inverted=false
+    inverted=true
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
