--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -7,7 +7,7 @@ sensors {
     }
 
     cameras {
-        xcamera0 {
+        camera0 {
             port=0
             width=320
             height=240
