--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Climber.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Climber.conf
@@ -1,14 +1,14 @@
 ports {
     leftGrapplingHook {
-        forwardChannel=4
-        reverseChannel=5
+        forwardChannel=5
+        reverseChannel=4
     }
     rightGrapplingHook {
-        forwardChannel=6
-        reverseChannel=7
+        forwardChannel=7
+        reverseChannel=6
     }
     leftWinch=11
-    rightWinch=22
+    rightWinch=12
     leftBrake {
         # These are set to 99 becasue they will not exist on week 0 robot
         # but are still created in the code...
@@ -24,7 +24,7 @@ ports {
 }
 
 leftWinch {
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
@@ -32,7 +32,7 @@ leftWinch {
 }
 
 rightWinch {
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
