Still working on this

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -1,6 +1,6 @@
 sensors {
     # Not using the ball feeder sensor for week 0 so it has x in front of name
-    xballFeederSensor {
+    ballFeederSensor {
         isOnboard = true
         numSensors = 8
         detectionThreshold = 0
