Added a shooter map to the shooter config and something to read it

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -32,7 +32,16 @@ shootertwo {
     brakeMode=false
 }
 
-shootingrpm{
+// This is an array of the shooting distance values and
+// there RPMs
+// Order: Distance, Rpm
+shootingmap = [
+    1.0, 5.0,
+    3.0, 7.0
+]
+
+
+shootingrpm {
     initline = 0
     fronttrench = 2650
     backtrench = 3540
