Added slow mode (on the wrong branch)

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -40,5 +40,9 @@ gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
+teleop {
+    forwardbackslowscale = 0.75
+    rotateslowscale = 0.5
+}
 ticksPerInch=29.4
 motorController=sparkMax
