--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -32,6 +32,10 @@ gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
+teleop {
+    forwardbackslowscale = 0.75
+    rotateslowscale = 0.5
+}
 ticksPerInch=2046
 motorController=talonSRX
 
