--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -36,5 +36,9 @@ gyrocorrect {
     kdelay=25
     kproportion=0.05
 }
+teleop {
+    forwardbackslowscale = 0.75
+    rotateslowscale = 0.5
+}
 ticksPerInch=1
 motorController=sparkMax
