--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Intake.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Intake.conf
@@ -7,9 +7,12 @@ ports {
 }
 
 IntakeSRXController {
-    inverted=false
+    inverted=true
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
     brakeMode=true
 }
+
+intakespeed = 0.7
+outtakespeed = -0.7
