Finished auto shoot with rpm command

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -4,6 +4,12 @@ ports{
     stageThree=13
 }
 
+# This is the amount of samples required for us to determine
+# if the feeder is truly empty
+shootWithRPM {
+    numOfFeederTestSamples = 5
+}
+
 stageOne {
     inverted=false
     hasEncoder=false
