--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -48,6 +48,8 @@ shootingrpm {
     targetzone = 0
 }
 
+# This value is multipled by the shooter rpm to get the series rpm
+seriesRPMScale = 1.5
 shooterticksperrotation = 42
 seriesticksperrotation = 0
 shooteridlespeed = 0
