--- a/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
@@ -10,6 +10,9 @@ shootingrpm{
     backtrench = 3540
     targetzone = 0
 }
+
+# This value is multipled by the shooter rpm to get the series rpm
+seriesRPMScale = 1.5
 shooterticksperrotation = 42
 seriesticksperrotation = 0
 shooteridlespeed = 0
