more feeder debugging

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -1,13 +1,13 @@
 sensors {
     # Not using the ball feeder sensor for week 0 so it has x in front of name
-    xballFeederSensor {
+    ballFeederSensor {
         isOnboard = true
         numSensors = 8
         detectionThreshold = 0
     }
 
     cameras {
-        camera0 {
+        xcamera0 {
             port=0
             width=320
             height=240
