--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -32,9 +32,9 @@ shootertwo {
     brakeMode=false
 }
 
-// This is an array of the shooting distance values and
-// there RPMs
-// Order: Distance, Rpm
+# This is an array of the shooting distance values and
+# there RPMs
+# Order: Distance (Inches), Rpm
 shootingmap = [
     1.0, 5.0,
     3.0, 7.0
