--- a/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/pidconstants.conf
@@ -36,4 +36,6 @@ TurnToFaceCommand {
     Ki = 0.008
     Kd = 0.0005
     minOutputToMove = 0.2
+    positionTolerance = 1
+    velocityTolerance = 1
 }
