--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
@@ -35,4 +35,6 @@ TurnToFaceCommand {
     Ki = 0.008
     Kd = 0.0005
     minOutputToMove = 0.2
+    positionTolerance = 1
+    velocityTolerance = 1
 }
