--- a/src/main/deploy/robotConfigs/Backup4905/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/Backup4905/pidconstants.conf
@@ -1,8 +1,38 @@
+runshooterwheelvelocity {
+    p = 0
+    i = 0
+    d = 0
+    s = 0
+    v = 0
+    tolerance = 1
+}
+runshooterseriesvelocity {
+    p = 0 
+    i = 0
+    d = 0
+    s = 0
+    v = 0
+    tolerance = 1
+}
+GyroPIDCommands {
+    TurningPTerm=0.0005
+    TurningITerm=0
+    TurningDTerm=0
+    minOutputToMove=0.1
+    positionTolerance=10
+    velocityTolerance=10
+}
 MoveUsingEncoder {
     Kp = 0.01
     Ki = 0
     Kd = 0
-    minOutputToMove = 0
-    positionTolerance=0.1
-    velocityTolerance=0.1
+    minOutputToMove = 0.075
+    positionTolerance=2
+    velocityTolerance=3
+}
+TurnToFaceCommand {
+    Kp = 0.03
+    Ki = 0.008
+    Kd = 0.0005
+    minOutputToMove = 0.2
 }
