--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -33,19 +33,25 @@ shootertwo {
 }
 
 # This is an array of the shooting distance values and
-# there RPMs
-# Order: Distance (Inches), Rpm 
+# their RPMs
+# Order: Shooter Distance from Target (Inches), RPM,
 shootingmap = [
-    150.0, 4000.0,
-    250.0, 4200.0,
-    330.0, 4500.0
+    144.0, 3204,
+    168.0, 3298,
+    192.0, 3298,
+    216.0, 3410,
+    240.0, 3580,
+    264.0, 3660,
+    288.0, 3967,
+    312.0, 4119,
+    336.0, 4228,
 ]
 
 
 shootingrpm {
     initline = 0
-    fronttrench = 2650
-    backtrench = 3540
+    fronttrench = 2000
+    backtrench = 4500
     targetzone = 0
 }
 
