fixed ShootingMap on MockShooter.

--- a/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
@@ -11,6 +11,17 @@ shootingrpm{
     targetzone = 0
 }
 
+shootingmap = [
+    144.0, 3204,
+    168.0, 3298,
+    192.0, 3298,
+    216.0, 3410,
+    240.0, 3580,
+    264.0, 3660,
+    288.0, 3967,
+    312.0, 4119,
+    336.0, 4228,
+]
 # This value is multipled by the shooter rpm to get the series rpm
 seriesRPMScale = 1.5
 shooterticksperrotation = 42
