--- a/src/main/deploy/robotConfigs/RoadKill/sensors.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/sensors.conf
@@ -1,9 +1,4 @@
 sensors {
-    ballFeederSensor {
-        isOnboard = true
-        numSensors = 8
-        detectionThreshold = 0
-    }
     cameras {
         camera0 {
             port=0
@@ -16,7 +11,7 @@ sensors {
 navx {
 port=MXP
 }
-limelight {
+xlimelight {
     cameraHeight = 23.0
     cameraAngleRadians = 0.59
 }
