--- a/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
@@ -19,3 +19,15 @@ shooteridlespeed = 0
 seriesidlespeed = 0
 shooterwheeljoystickscale = 1
 serieswheeljoystickscale = 1
+
+shootingmap = [
+    144.0, 3204,
+    168.0, 3298,
+    192.0, 3298,
+    216.0, 3410,
+    240.0, 3580,
+    264.0, 3660,
+    288.0, 3967,
+    312.0, 4119,
+    336.0, 4228,
+]
