--- a/src/main/deploy/robotConfigs/TheClaw/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/sensors.conf
@@ -11,6 +11,12 @@ sensors {
             height=240
             fps=10
         }
+        camera1 {
+            port=1
+            width=320
+            height=240
+            fps=10
+        }
     }
 }
 navx {
