--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -7,7 +7,7 @@ ports{
 # This is the amount of samples required for us to determine
 # if the feeder is truly empty
 shootWithRPM {
-    numOfFeederTestSamples = 30
+    numOfFeederTestSamples = 100#30
 }
 
 stageOne {
