--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -20,6 +20,7 @@ port=MXP
 }
 
 limelight {
-    cameraHeight = 24.0
-    cameraAngleRadians = 0.16
+    cameraHeight = 24.75
+    cameraAngleRadians = 0.104
+    cameraDistToFrame=15.625
 }
