We updated automode distences

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -40,6 +40,6 @@ teleop {
     forwardbackslowscale = 0.5
     rotateslowscale = 0.5
 }
-maxSpeedToPickupPowerCells=0
+maxSpeedToPickupPowerCells=0.2
 ticksPerInch=0.73
 motorController=sparkMax
