--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/pidconstants.conf
@@ -15,10 +15,10 @@ runshooterseriesvelocity {
     tolerance = 50
 }
 GyroPIDCommands {
-    TurningPTerm=0.004
-    TurningITerm=0.0001
-    TurningDTerm=0.0001
-    minOutputToMove=0.06
+    TurningPTerm=0.0000004
+    TurningITerm=0
+    TurningDTerm=0
+    minOutputToMove=0.055
     positionTolerance=1
     velocityTolerance=1
 }
