Added a horizontal transform to the getdistance method in lime

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -23,4 +23,5 @@ limelight {
     cameraHeight = 24
     cameraAngleRadians = 0.104
     cameraDistToFrame=15.625
+    cameraDistanceHorizontalTransform = 2.5
 }
