Mockified the gyro and added some config constants -  wip

--- a/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/Shooter.conf
@@ -19,6 +19,7 @@ shooteridlespeed = 0
 seriesidlespeed = 0
 shooterwheeljoystickscale = 1
 serieswheeljoystickscale = 1
+rpmtranslation = 0
 
 shootingmap = [
     144.0, 3204,
