--- a/src/main/deploy/robotConfigs/TheClaw/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/sensors.conf
@@ -13,10 +13,13 @@ sensors {
         }
     }
 }
-navx {
+# There is no gyro on this robot :(
+# May cause wierd behavior
+XXXXnavx {
     port=SPI
 }
 limelight {
     cameraHeight = 0.0
     cameraAngleRadians = 0.0
+    cameraDistToFrame = 0.0
 }
