we moved constants from command classes to constants file

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
@@ -37,3 +37,32 @@ TurnToFaceCommand {
     minOutputToMove = 0.06
     positionTolerance = 2
 }
+ShootWithRPM {
+    seriesRPMScale = 1.5
+    numOfFeederTestSamples = 100
+}
+RunShooterWheelVelocity {
+    shooterwheeljoystickscale = 20
+}
+RunShooterSeriesVelocity {
+    shooterwheeljoystickscale = 20
+}
+ShootWithLimeLight {
+    numOfFeederTestSamples = 100
+}
+DeployAndRunIntake {
+    intakespeed = 1.0
+}
+ShootingRPM {
+    initline = 3760
+    fronttrench = 3497
+    backtrench = 4750
+    targetzone = 1800
+}
+RunIntakeOut {
+    outtakespeed = -0.7
+}
+DefaultShooterParallelCommandGroup {
+    shooteridlespeed = 0
+    seriesidlespeed = 0
+}
