--- a/src/main/deploy/robotConfigs/RoadKill/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/commandconstants.conf
@@ -38,3 +38,32 @@ TurnToFaceCommand {
     positionTolerance = 1
     velocityTolerance = 10
 }
+ShootWithRPM {
+    seriesRPMScale = 1.5
+    numOfFeederTestSamples = 100
+}
+RunShooterWheelVelocity {
+    shooterwheeljoystickscale = 20
+}
+RunShooterSeriesVelocity {
+    shooterwheeljoystickscale = 20
+}
+ShootWithLimeLight {
+    numOfFeederTestSamples = 100
+}
+DeployAndRunIntake {
+    intakespeed = 1.0
+}
+ShootingRPM {
+    initline = 3760
+    fronttrench = 3497
+    backtrench = 4750
+    targetzone = 1800
+}
+RunIntakeOut {
+    outtakespeed = -0.7
+}
+DefaultShooterParallelCommandGroup {
+    shooteridlespeed = 0
+    seriesidlespeed = 0
+}
