We added value to config.

--- a/src/main/deploy/robotConfigs/Backup4905/sensors.conf
+++ b/src/main/deploy/robotConfigs/Backup4905/sensors.conf
@@ -1,5 +1,22 @@
 sensors { 
     colorSensor {
         isOnboard = true
+        swatchColors {
+            red.r = 0.61
+            red.g = 0.30
+            red.b = 0.08
+
+            green.r = 0.30
+            green.g = 0.53
+            green.b = 0.18
+
+            blue.r = 0.26
+            blue.g = 0.48
+            blue.b = 0.26
+
+            yellow.r = 0.44
+            yellow.g = 0.47
+            yellow.b = 0.07
+        } 
     }
 }
