--- a/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheClaw/drivetrain.conf
@@ -36,6 +36,7 @@ teleop {
     forwardbackslowscale = 0.75
     rotateslowscale = 0.5
 }
+limitAccelerationConst=0.1
 ticksPerInch=2046
 motorController=talonSRX
 
