Added two new maps for Tolerance and Feedforward. WARNING this has test prints in robot init.

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -35,8 +35,8 @@ shootertwo {
 # This is an array of the shooting distance values and
 # their RPMs
 # Order: Shooter Distance from Target (Inches), RPM,
-shootingmap = [
-    120.0 , 3760 #10'
+shootingRPMMap = [
+    120.0, 3760, #10'
     144.0, 3310, #12'
     168.0, 3497, #14'
     192.0, 3492, #16'
@@ -46,6 +46,26 @@ shootingmap = [
     288.0, 4350, #24' 
     312.0, 4640, #26'
     336.0, 4750, #28'
+]
+
+# This is an array of the shooting RPMs values and
+# their feedforward term
+# Order: Shooter RPM, FeedForward,
+shootingFeedForwardMap = [
+    # These values are just place holders, but match the
+    # current static feedforward term
+    3700, 0.0002,
+    4800, 0.0002,
+]
+
+# This is an array of the shooting distance values and
+# their tolerance
+# Order: Shooter Distance from Target (Inches), Tolerance,
+shootingToleranceMap = [
+    # These values are just place holders, but match the
+    # current static tolerance term
+    3700, 150.0,
+    4800, 150.0,
 ]
 
 
