--- a/build.gradle
+++ b/build.gradle
@@ -86,3 +86,7 @@ spotless {
     eclipse().configFile 'frc4905.eclipseformat.xml'	// XML file dumped out by the Eclipse formatter
   }
 }
+
+test {
+    useJUnitPlatform()
+}
