--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+    testCompile "org.mockito:mockito-core:2.+" 
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
