--- a/build.gradle
+++ b/build.gradle
@@ -64,10 +64,12 @@ dependencies {
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation "org.mockito:mockito-junit-jupiter:3.6.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.1'
 
-    testCompile "org.mockito:mockito-core:2.+" 
+    testCompile "org.mockito:mockito-core:2.+"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
