Made it so the robot can detect how far away the power cells are using ultrasonic sensors

--- a/src/main/deploy/robotConfigs/RoadKill/sensors.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/sensors.conf
@@ -7,6 +7,12 @@ sensors {
             fps=10
         }
     }
+    ultrasonicSensor {
+        powerCellDetector {
+            ping=0
+            echo=1
+        }
+    }
 }
 navx {
 port=MXP
