we added the rotate fast scale.

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -43,6 +43,7 @@ gyrocorrect {
 teleop {
     forwardbackslowscale = 0.75
     rotateslowscale = 0.5
+    rotatefastscale = 0.75
 }
 ticksPerInch=29.4
 motorController=sparkMax
