Added a config file parameter to the droid your looking for config

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -39,6 +39,7 @@ gyrocorrect {
 teleop {
     forwardbackslowscale = 0.5
     rotateslowscale = 0.5
+    rotatefastscale = 0.8
 }
 maxSpeedToPickupPowerCells=0.35
 ticksPerInch=0.73
