Starting to implement test path planning code.

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -40,6 +40,17 @@ teleop {
     forwardbackslowscale = 0.5
     rotateslowscale = 0.5
 }
+pathplanningconstants {
+    ksVolts = 0.0
+    kvVoltSecondsPerMeter = 0.0
+    kaVoltSecondsSquaredPerMeter = 0.0
+    kPDriveVel = 0.0
+    kTrackwidthMeters = 0.0
+    kMaxSpeedMetersPerSecond = 0.0
+    kMaxAccelerationMetersPerSecondSquared = 0.0
+    kRamseteB = 0.0
+    kRamseteZeta = 0.0
+}
 maxSpeedToPickupPowerCells=0.35
 ticksPerInch=0.73
 motorController=sparkMax
