Working on getting 2d path planning working.

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -44,5 +44,17 @@ teleop {
     forwardbackslowscale = 0.75
     rotateslowscale = 0.5
 }
+
+pathplanningconstants {
+    ksVolts = 0.202
+    kvVoltSecondsPerMeter = 3.44
+    kaVoltSecondsSquaredPerMeter = 0.398
+    kPDriveVel = 2.03
+    kTrackwidthMeters = 0.6
+    kMaxSpeedMetersPerSecond = 3
+    kMaxAccelerationMetersPerSecondSquared = 3
+    kRamseteB = 2
+    kRamseteZeta = 0.7
+}
 ticksPerInch=29.4
 motorController=sparkMax
