--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -21,17 +21,17 @@ backleft {
     encoderTicksPerRotation=42
 }
 frontright {
-    inverted=false
+    inverted=true
     hasEncoder=true
-    encoderInverted=true
+    encoderInverted=false
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
 }
 backright {
-    inverted=false
+    inverted=true
     hasEncoder=true
-    encoderInverted=true
+    encoderInverted=false
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
@@ -51,7 +51,7 @@ pathplanningconstants {
     kaVoltSecondsSquaredPerMeter = 0.398
     kPDriveVel = 2.03
     kTrackwidthMeters = 0.6
-    kMaxSpeedMetersPerSecond = 2
+    kMaxSpeedMetersPerSecond = 1
     kMaxAccelerationMetersPerSecondSquared = 1
     kRamseteB = 2
     kRamseteZeta = 0.7
