Finished the Path A path choosing mechanism. Did the same for Path B, but needs to be fixed and tested more

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/sensors.conf
@@ -14,6 +14,12 @@ sensors {
             fps=10
         }
     }
+    ultrasonicSensor {
+        powerCellDetector {
+            ping=0
+            echo=1
+        }
+    }
 }
 navx {
 port=MXP
