Added logging for the ramseteCommand so we can finally find out whats happening

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -49,7 +49,7 @@ pathplanningconstants {
     ksVolts = 0.175
     kvVoltSecondsPerMeter = 3.42
     kaVoltSecondsSquaredPerMeter = 0.31
-    kPDriveVel = 1.94
+    kPDriveVel = 1.0 #1.94
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 3
     kMaxAccelerationMetersPerSecondSquared = 1
