--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
-    id "com.diffplug.gradle.spotless" version "3.27.0"
+    id "edu.wpi.first.GradleRIO" version "2021.2.2"
+    id "com.diffplug.spotless" version "5.9.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -39,11 +39,7 @@ deploy {
 }
 
 // Set this to true to enable desktop support.
-def includeDesktopSupport = true
-
-test {
-    useJUnitPlatform()
-}
+def includeDesktopSupport = false
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -57,19 +53,29 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    // https://mvnrepository.com/artifact/com.typesafe/config
-    compile group: 'com.typesafe', name: 'config', version: '1.3.3'
+    testImplementation 'junit:junit:4.12'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
 
+    // Websocket extensions require additional configuration.
+    // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
+    // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
+
+    compile group: 'com.typesafe', name: 'config', version: '1.4.1'
     testImplementation "org.mockito:mockito-junit-jupiter:3.6.0"
     testImplementation "org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.1'
-
     testCompile "org.mockito:mockito-core:2.+"
+}
+
+// Simulation configuration (e.g. environment variables).
+sim {
+    // Sets the websocket client remote host.
+    // envVar "HALSIMWS_HOST", "10.0.0.2"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
@@ -90,8 +96,8 @@ spotless {
   }
   java {
 
-    importOrder 'java', 'javax', 'org', 'com', 'com.diffplug', ''	// A sequence of package names
+    importOrder 'java', 'javax', 'org', 'com', 'com.diffplug', ''      // A sequence of package names
     removeUnusedImports() // removes any unused imports
-    eclipse().configFile 'frc4905.eclipseformat.xml'	// XML file dumped out by the Eclipse formatter
+    eclipse().configFile 'frc4905.eclipseformat.xml'   // XML file dumped out by the Eclipse formatter
   }
 }
