RPMs for the 4 accuracy zones

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -54,6 +54,10 @@ shootingrpm {
     fronttrench = 3497
     backtrench = 4750
     targetzone = 1800
+    backOfGreenZone = 4400
+    centerOfYellowZone = 1950
+    centerOfBlueZone = 2150
+    frontOfRedZone = 3050
 }
 
 # This value is multipled by the shooter rpm to get the series rpm
