copied a bunch of config files from RoadKill. fixed a bunch of config strings with spelling mistakes. on windows, creating a symbol link requires running in administrator mode, so only create a latest sym link if we're not running on windows. simulation starts and does bring up the "driver station" but the robot does not move.

--- a/src/main/deploy/robotConfigs/RomiRobot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RomiRobot/drivetrain.conf
@@ -18,3 +18,12 @@ right {
 ticksPerRevolution = 1440.0
 wheelDiameterInch = 2.75591
 motorController=romiDrive
+
+gyrocorrect {
+    kdelay=25
+    kproportion=0.025
+}
+teleop {
+    forwardbackslowscale = 0.75
+    rotateslowscale = 0.5
+}
