refactored NavXGyroSensor to Gyro as we're now supporting more than one gyro. moved common code from RealNavXGyroSensor to Gyro to be shared with other gyro classes. fixed a bunch of Romi constants. the Romi will now TurnToCompassHeading and move with encoder. also added deadband to controllers.

--- a/src/main/deploy/robotConfigs/RomiRobot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RomiRobot/drivetrain.conf
@@ -15,15 +15,16 @@ right {
     channelB = 7
 }
 
-ticksPerRevolution = 1440.0
+ticksPerRevolution = 5760
 wheelDiameterInch = 2.75591
 motorController=romiDrive
 
 gyrocorrect {
     kdelay=25
-    kproportion=0.01
+    kproportion=0.02
 }
 teleop {
-    forwardbackslowscale = 0.75
+    forwardbackslowscale = 0.5
     rotateslowscale = 0.5
+    controllerDeadband = 0.01
 }
