Working d2 path generation code that is not very choppy!

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -48,12 +48,13 @@ teleop {
 pathplanningconstants {
     ksVolts = 0.15
     kvVoltSecondsPerMeter = 3.45 
-    kaVoltSecondsSquaredPerMeter = 0.423
-    kPDriveVel = 5 #14.4
-    kTrackwidthMeters = 0.7
+    kaVoltSecondsSquaredPerMeter = 0.0 #0.423
+    kPDriveVel = 1.0 #14.4
+    kDDriveVel = 0.0
+    kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 1
     kMaxAccelerationMetersPerSecondSquared = 0.5
-    kRamseteB = 2
+    kRamseteB = 2.0
     kRamseteZeta = 0.7
 }
 ticksPerInch=29.4
