Changing paths and new logging.

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -49,7 +49,7 @@ pathplanningconstants {
     ksVolts = 0.15
     kvVoltSecondsPerMeter = 3.45 
     kaVoltSecondsSquaredPerMeter = 0.0 #0.423
-    kPDriveVel = 1.0 #14.4
+    kPDriveVel = 1.0
     kDDriveVel = 0.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 1
