--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -43,8 +43,8 @@ teleop {
 pathplanningconstants {
     ksVolts = 0.231
     kvVoltSecondsPerMeter = 3.51
-    kaVoltSecondsSquaredPerMeter = 0.452
-    kPDriveVel = 0.0
+    kaVoltSecondsSquaredPerMeter = 0.0 #0.452
+    kPDriveVel = 10.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 0.0
     kMaxAccelerationMetersPerSecondSquared = 0.0
