We changed shooter series wheel from talon to Spark. We also changed shooter stage 3 from talon to spark.

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -20,14 +20,14 @@ stageOne {
 
 stageTwo {
     inverted=true
-    hasEncoder=false
+    hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=true
 }
 
 stageThree {
-    inverted=true
+    inverted=false
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
