--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -10,7 +10,7 @@ ports{
 
 shooterseries {
     inverted=true
-    hasEncoder=false
+    hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=false
