Changed paths and made sure that all of the autonav files use 2d path planning.

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -49,7 +49,7 @@ pathplanningconstants {
     ksVolts = 0.15
     kvVoltSecondsPerMeter = 3.45 
     kaVoltSecondsSquaredPerMeter = 0.0 #0.423
-    kPDriveVel = 1.0
+    kPDriveVel = 5.0
     kDDriveVel = 0.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 1
@@ -57,5 +57,7 @@ pathplanningconstants {
     kRamseteB = 2.0
     kRamseteZeta = 0.7
 }
+
+rightSideInverted=false
 ticksPerInch=29.4
 motorController=sparkMax
