New Barrel racing path

--- a/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/drivetrain.conf
@@ -48,8 +48,8 @@ teleop {
 pathplanningconstants {
     ksVolts = 0.15
     kvVoltSecondsPerMeter = 3.45 
-    kaVoltSecondsSquaredPerMeter = 0.0 #0.423
-    kPDriveVel = 5.0
+    kaVoltSecondsSquaredPerMeter = 0.423
+    kPDriveVel = 2.0 #5.0
     kDDriveVel = 0.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 1
