--- a/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/Shooter.conf
@@ -9,6 +9,11 @@ shootingrpm{
     fronttrench = 2650
     backtrench = 3540
     targetzone = 0
+    backOfGreenZone = 4400
+    centerOfYellowZone = 1950
+    centerOfBlueZone = 2150
+    frontOfRedZone = 3050
+
 }
 
 shootingmap = [
