--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
@@ -5,7 +5,16 @@ runshooterwheelvelocity {
     s = 0
     tolerance = 75 
 }
-
+shooterTargetRPMandPValues = [
+    500, 0.001,
+    1000, 0.001, 
+    1500, 0.001,
+    2000, 0.001,
+    2500, 0.001,
+    3000, 0.001,
+    3500, 0.001,
+    4000, 0.001
+]
 shooterTargetRPMAndKValues = [
     500, 0.00025,
     1000, 0.00023, 
