--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -43,7 +43,7 @@ teleop {
 pathplanningconstants {
     ksVolts = 0.231
     kvVoltSecondsPerMeter = 3.51
-    kaVoltSecondsSquaredPerMeter = 0.0 #0.452
+    kaVoltSecondsSquaredPerMeter = 0.452
     kPDriveVel = 6.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 0.0
