--- a/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
@@ -27,3 +27,14 @@ teleop {
     forwardbackslowscale = 0.9
     rotateslowscale = 0.85
 }
+pathplanningconstants {
+    ksVolts = 0.929
+    kvVoltSecondsPerMeter = 6.33
+    kaVoltSecondsSquaredPerMeter = 0.0389
+    kPDriveVel = 0.085
+    kTrackwidthMeters = 0.142072613
+    kMaxSpeedMetersPerSecond = 0.8
+    kMaxAccelerationMetersPerSecondSquared = 0.8
+    kRamseteB = 2
+    kRamseteZeta = 0.7
+}
