--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/commandconstants.conf
@@ -3,16 +3,27 @@ runshooterwheelvelocity {
     i = 0.0 #0.00001
     d = 0
     s = 0
-    tolerance = 100
+    tolerance = 50
 }
 
 shooterTargetRPMAndKValues = [
-    500, 0.00024,
-    1000, 0.00023, 
-    1500, 0.00021
-    2000, 0.00022,
-    2500, 0.00022,
-    3000, 0.00025,
+    500, 0.000222,
+    1000, 0.000205, 
+    1500, 0.000203
+    2000, 0.000205,
+    2500, 0.00021,
+    3000, 0.000219,
+    3500, 0.00023,
+    4000, 0.00024
+]
+
+shooterTargetRPMandPValues = [
+     500, 0.0005,
+    1000, 0.00075, 
+    1500, 0.00075,
+    2000, 0.0009,
+    2500, 0.0016,
+    3000, 0.00175,
     3500, 0.00023,
     4000, 0.00024
 ]
