--- a/src/main/deploy/robotConfigs/RoadKill/sensors.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/sensors.conf
@@ -17,7 +17,7 @@ sensors {
 navx {
 port=MXP
 }
-xxxlimelight {
+limelight {
     cameraHeight = 23.0
     cameraAngleRadians = 0.3
     cameraDistToFrame = 0.0
