--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/drivetrain.conf
@@ -45,6 +45,7 @@ pathplanningconstants {
     kvVoltSecondsPerMeter = 3.51
     kaVoltSecondsSquaredPerMeter = 0.452
     kPDriveVel = 7.0
+    kIDriveVel = 0.0
     kTrackwidthMeters = 0.6
     kMaxSpeedMetersPerSecond = 0.0
     kMaxAccelerationMetersPerSecondSquared = 0.0
