--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.1'
     testCompile "org.mockito:mockito-core:2.+"
+
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
+
 }
 
 // Simulation configuration (e.g. environment variables).
