Removed Third stage Feeder. Lowered shooter RPM tolerance. Also raised the hood of the robot for less parabolic shots

--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Feeder.conf
@@ -1,7 +1,6 @@
 ports{
     stageOne=8
     stageTwo=9
-    stageThree=13
 }
 
 # This is the amount of samples required for us to determine
@@ -15,7 +14,7 @@ stageOne {
     hasEncoder=false
     encoderInverted=false
     currentLimit=60
-    brakeMode=true
+    brakeMode=false
 }
 
 stageTwo {
@@ -23,13 +22,6 @@ stageTwo {
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
-    brakeMode=true
+    brakeMode=false
 }
 
-stageThree {
-    inverted=false
-    hasEncoder=false
-    encoderInverted=false
-    currentLimit=60
-    brakeMode=true
-}
