--- a/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
+++ b/src/main/deploy/robotConfigs/TheDroidYoureLookingFor/Shooter.conf
@@ -2,10 +2,20 @@ ports{
     shooterone=5
     shootertwo=6
     shooterseries=7
+    stageThree=13
+
     hood{
         forwardChannel=2
         reverseChannel=3
     }
+}
+
+stageThree {
+    inverted=false
+    hasEncoder=false
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
 }
 
 shooterseries {
