some tuning of the romi slalom path

--- a/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
@@ -32,7 +32,7 @@ pathplanningconstants {
     ksVolts = 0.929
     kvVoltSecondsPerMeter = 6.33
     kaVoltSecondsSquaredPerMeter = 0.0389
-    kPDriveVel = 8.0
+    kPDriveVel = 8.0#8.0
     kTrackwidthMeters = 0.142072613
     kMaxSpeedMetersPerSecond = 0.8
     kMaxAccelerationMetersPerSecondSquared = 0.8
