--- a/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
@@ -28,3 +28,17 @@ teleop {
     rotateslowscale = 0.4
     controllerDeadband = 0.01
 }
+
+pathplanningconstants {
+    ksVolts = 0.929
+    kvVoltSecondsPerMeter = 6.33
+    kaVoltSecondsSquaredPerMeter = 0.0389
+    kPDriveVel = 11.0
+    kTrackwidthMeters = 0.142072613
+    kMaxSpeedMetersPerSecond = 0.8
+    kMaxAccelerationMetersPerSecondSquared = 0.8
+    kRamseteB = 2
+    kRamseteZeta = 0.7
+}
+
+rightSideInverted=true
